--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="apple-touch-icon" href="/favicon_io/apple-touch-icon.png" />
     <link rel="manifest" href="/favicon_io/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Daily Checklist</title>
+    <title>Morning Checklist</title>
   </head>
   <body>
     <div id="root"></div>
